--- a/src/main/java/com/diegojacober/delivery/view/SignUpRestaurant.form
+++ b/src/main/java/com/diegojacober/delivery/view/SignUpRestaurant.form
@@ -270,7 +270,7 @@
               <Border info="null"/>
             </Property>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-              <Color id="Cursor Padr&#xe3;o"/>
+              <Color id="Default Cursor"/>
             </Property>
           </Properties>
           <Events>
